[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/interface/text/characters/egg_shell.png" type="Texture" id=1]
[ext_resource path="res://assets/interface/arrow/left.png" type="Texture" id=2]
[ext_resource path="res://assets/interface/arrow/right.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/egg_shell/1.png" type="Texture" id=4]
[ext_resource path="res://assets/interface/text/please_select_a_character.png" type="Texture" id=5]
[ext_resource path="res://scripts/interface/initial_screen.gd" type="Script" id=6]
[ext_resource path="res://assets/interface/arrow/left_disabled.png" type="Texture" id=7]
[ext_resource path="res://assets/interface/arrow/right_disabled.png" type="Texture" id=8]
[ext_resource path="res://assets/interface/arrow/left_hover.png" type="Texture" id=9]
[ext_resource path="res://assets/interface/arrow/right_hover.png" type="Texture" id=10]
[ext_resource path="res://assets/interface/panel/initial_screen_panel.png" type="Texture" id=11]
[ext_resource path="res://assets/interface/black_strip.png" type="Texture" id=12]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "showcase"
length = 2.7
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("LeftContainer/Left:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 99 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightContainer/Right:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 99 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "button_animation"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LeftContainer/Left:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 99 ), Vector2( 5, 99 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightContainer/Right:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 99 ), Vector2( -5, 99 ) ]
}

[node name="InitialScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
texture = ExtResource( 11 )

[node name="Header" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -224.0
margin_top = 110.0
margin_right = 224.0
margin_bottom = 119.0
rect_min_size = Vector2( 448, 60 )
texture = ExtResource( 5 )
expand = true

[node name="Bottom" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -132.0
margin_top = -185.0
margin_right = 132.0
margin_bottom = -147.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="HContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -120.0
margin_right = 168.0
margin_bottom = 120.0
rect_min_size = Vector2( 320, 240 )
mouse_filter = 2
custom_constants/separation = 10
alignment = 1

[node name="LeftContainer" type="VBoxContainer" parent="HContainer"]
margin_right = 18.0
margin_bottom = 240.0
alignment = 1

[node name="Left" type="TextureButton" parent="HContainer/LeftContainer" groups=["button"]]
margin_top = 99.0
margin_right = 18.0
margin_bottom = 141.0
rect_min_size = Vector2( 18, 42 )
disabled = true
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 7 )
expand = true

[node name="CharacterContainer" type="Control" parent="HContainer"]
margin_left = 28.0
margin_right = 308.0
margin_bottom = 240.0
rect_min_size = Vector2( 280, 240 )
mouse_filter = 2

[node name="Pivot" type="Control" parent="HContainer/CharacterContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 2

[node name="Texture" type="Sprite" parent="HContainer/CharacterContainer/Pivot"]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
hframes = 6
vframes = 7

[node name="Animation" type="AnimationPlayer" parent="HContainer/CharacterContainer/Pivot"]
autoplay = "showcase"
anims/RESET = SubResource( 5 )
anims/showcase = SubResource( 4 )

[node name="RightContainer" type="VBoxContainer" parent="HContainer"]
margin_left = 318.0
margin_right = 336.0
margin_bottom = 240.0
alignment = 1

[node name="Right" type="TextureButton" parent="HContainer/RightContainer" groups=["button"]]
margin_top = 99.0
margin_right = 18.0
margin_bottom = 141.0
rect_min_size = Vector2( 18, 42 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 8 )
expand = true

[node name="Animation" type="AnimationPlayer" parent="HContainer"]
autoplay = "button_animation"
anims/RESET = SubResource( 3 )
anims/button_animation = SubResource( 2 )

[node name="BlackStrip" type="TextureRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
texture = ExtResource( 12 )
expand = true

[connection signal="animation_finished" from="HContainer/CharacterContainer/Pivot/Animation" to="." method="on_character_animation_finished"]
